--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,66 +1,169 @@
-body {
-	background-color: #f3f0e9;
+html {
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.menu {
+
+body {
+	background-color: transparent;
+}
+
+section {
+	margin-top: 5%;
+}
+
+nav {
 	width: 100%;
-	background: #000;
-	list-style: none;
+	border: solid 5px black;
+}
+
+.menu {
+	background: peru;
 	margin: 0;
 	padding: 0;
+	display: flex;
+	justify-content: space-between;
 }
+
 .menu li {
 	display: inline-block;
+	
 }
+
 .menu li a {
 	padding: 10px 20px;
 	display: inline-block;
-	color: #fff;
+	color: black;
+	text-decoration: none;
+	font-size: 20px;
+	font-weight: bolder;
 }
+
 .menu li a:hover {
 	background: #ccc;
 	color: #000;
 }
+
 img {
 	width: 200px;
 	height: auto;
 	margin: auto;
 	display: block;
 }
+figure img {
+	border-radius: 20px;
+	border: solid 2px #fff;
+}
+img.logo {
+	width: 25px;
+	display: inline-block;
+}
+
 form {
 	width: 25%;
-	border: 1px solid #ccc;
+	border: 10px solid  black;
 	margin: 20px;
 	padding: 20px;
+	background-color: blanchedalmond;
 }
+
 label {
 	font-size: 12px;
 	display: block;
 	width: 100%
 }
-textarea{
+
+textarea {
 	resize: vertical;
 	max-height: 250px;
 	min-height: 100px;
 }
-input, textarea {
+
+input,
+textarea {
 	margin-bottom: 20px;
 	width: 100%;
 	padding: 10px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	box-sizing: border-box; 
+	box-sizing: border-box;
 	border: 1px solid #ccc;
 }
-input:focus, textarea:focus {
+
+input:focus,
+textarea:focus {
 	border: 1px solid #1668c4;
 }
+
 input[type="submit"] {
 	margin-bottom: 0px;
-	background: #1668c4;
+	background: black;
 	color: #fff;
 	border: none;
 }
+
 input[type="submit"]:hover {
 	background: #4a88f4;
 	cursor: pointer;
+}
+
+footer {
+	background: #000;
+	color: #fff;
+	clear: both;
+	padding: 10px 0px;
+	text-align: center;
+}
+
+/* ---------------------  tabla para catalogo---------------------*/
+table {
+	width: 65%;
+	margin: auto;
+	padding: 2px;
+
+}
+
+thead {
+	text-align: center;
+	background-color: burlywood;
+}
+
+tbody {
+	background-color: rgb(192, 153, 94);
+	color: black;
+}
+
+figcaption {
+	text-align: center;
+}
+
+ul {
+	margin: auto;
+}
+
+ul li {
+	text-align: justify;
+}
+
+table,
+td,
+tr {
+	border: 1px solid blanchedalmond;
+	border-collapse: collapse;
+	text-align: center;
+}
+
+tr,
+td {
+	transition: .4s ease-in;
+}
+
+tr:hover:not(#firstrow),
+tr:hover td:empty {
+	background: rgb(202, 197, 145);
+	pointer-events: visible;
+}
+
+tr:hover:not(#firstrow) {
+	transform: scale(1.03);
+	font-weight: 200;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
 }
